Added simple banner to application.html.erb

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -26,6 +26,7 @@
 @import "components/tooltips";
 @import "components/action-bar";
 @import "components/which-reviews";
+@import "components/feature-banner";
 
 // VENDOR WIDGETS
 @import "bootstrap-datepicker3";
