--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
   <body data-controller="<%= controller_name %>" data-action="<%= action_name %>">
     <section id="<%= controller_name %>-<%= action_name %>">
       <%= render 'layouts/header' %>
+      <%= render 'layouts/banner' %>
       <section class="content-container">
 
         <section class="row">
