Banner shows latest change logged in features.yaml

--- a/app/views/layouts/_banner.html.erb
+++ b/app/views/layouts/_banner.html.erb
@@ -1,3 +1,6 @@
+<% require 'yaml' %>
+<% thing = YAML.load_file('properties/features.yaml') %>
+
 <div class=feature-banner-container>
-	Banner!?
+	<%= thing['features'].to_a.last['shortDesc'].html_safe %>
 </div>
