--- a/app/views/layouts/_banner.html.erb
+++ b/app/views/layouts/_banner.html.erb
@@ -1,6 +1,3 @@
-<% require 'yaml' %>
-<% feature_list = YAML.load_file('properties/features.yaml') %>
-
 <div class=feature-banner-container>
-	<%= feature_list['features'].to_a.last['shortDesc'].html_safe %>
+	<%= feature_list.latest['banner_text'].html_safe %>
 </div>
