Banner closes when you click the X

--- a/app/views/layouts/_banner.html.erb
+++ b/app/views/layouts/_banner.html.erb
@@ -1,3 +1,4 @@
-<div class=feature-banner-container>
+<div id=feature-banner-container>
 	<%= feature_list.latest['banner_text'].html_safe %>
+	<button id=feature-banner-close>X</button>
 </div>
