--- a/app/assets/javascripts/feature-banner.js.erb
+++ b/app/assets/javascripts/feature-banner.js.erb
@@ -2,12 +2,11 @@ jQuery(function () {
     var feature_banner = $('#feature-banner-container');
     var close_button = $('#feature-banner-close');
     var feature_banner_id = $('#feature-banner-id').html();
-    
     var tell_server_latest_feature_banner_seen = function() {
+      debugger
       $.ajax({
             type: 'POST',
-            <% user_path %>
-            url: '<% user_path %>seen_feature_banner/'+feature_banner_id,
+            url: '/seen_feature_banner/'+feature_banner_id,
             data: { feature_banner_id: feature_banner_id }
       });
     };
